// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  autoComplete="off"
  noValidate={true}
>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form
    </h2>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
        data-shrink={true}
        htmlFor="text"
      >
        Text Field
        <span
          className="MuiFormLabel-asterisk-78"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={true}
          className="MuiInput-input-87"
          disabled={false}
          id="text"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          rows={1}
          type="text"
          value="prefilled text-field"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="select"
      >
        Select
        <span
          className="MuiFormLabel-asterisk-78"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <div
          className="MuiSelect-root-92"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-93 MuiSelect-selectMenu-94 MuiInput-input-87"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={true}
            id="select"
            required={true}
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiSelect-icon-96"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
        data-shrink={true}
        htmlFor="number"
      >
        Number
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="number"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="number"
          value={10}
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthFull-64"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="multiline"
      >
        Multiline
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-multiline-85 MuiInput-underline-83"
      >
        <textarea
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputMultiline-89"
          disabled={false}
          id="multiline"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={5}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63 FormFieldListBranch-root-107"
    >
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="list"
        >
          List
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-108"
      >
        <ul
          className="MuiList-root-111 MuiList-padding-112"
        />
      </div>
      <div>
        Array [
          "",
          <div
            className="MuiChip-root-124 MuiChip-deletable-126"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="MuiChip-label-129"
            >
              Foo
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          <div
            className="MuiTooltip-popper-116"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <div
              aria-hidden={true}
              className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
              role="tooltip"
            >
              Foo-Baz
            </div>
          </div>,
        ]
        <div
          className="MuiChip-root-124 MuiChip-deletable-126 FormFieldListBranch-selectedItem-110"
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiChip-label-129"
          >
            Bar
          </span>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        Array [
          "",
          <div
            className="MuiChip-root-124 MuiChip-deletable-126"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="MuiChip-label-129"
            >
              Baz
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          <div
            className="MuiTooltip-popper-116"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <div
              aria-hidden={true}
              className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
              role="tooltip"
            >
              Foo-Baz
            </div>
          </div>,
        ]
      </div>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63 FormFieldListBranch-root-107"
    >
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="free-list"
        >
          Free List
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="free-list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-108"
      >
        <ul
          className="MuiList-root-111 MuiList-padding-112"
        />
      </div>
      <div />
    </div>
    <div
      className="FormGroupWrapper-groupIntegrated-4"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 FormBranch-title-1"
      >
        Nested Form
      </h3>
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="nested-text"
        >
          Nested Text
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="nested-text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      />
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthFull-64 FormFieldBranch-field-59"
    >
      <h1
        className="MuiTypography-root-33 MuiTypography-headline-38"
      >
        Content
      </h1>
      <hr
        className="MuiDivider-root-134"
      />
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby="url-helper-text"
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="url"
      >
        URL
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="url"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="url"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-138"
        id="url-helper-text"
      >
        Should be URL with trailing slash
      </p>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="empty"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Date
    </h2>
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="date"
        >
          Date
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="date"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03.01.2018"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="time"
        >
          Time
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="time"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03:28 pm"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="datetime"
        >
          Datetime
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="datetime"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03.01.2018, 03:28 pm"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Disabled fields
    </h2>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="disabled"
      >
        Disabled Text
      </label>
      <div
        className="MuiInput-root-79 MuiInput-disabled-82 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-disabled-82"
          disabled={true}
          id="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="disabled-select"
      >
        Disabled Select
      </label>
      <div
        className="MuiInput-root-79 MuiInput-disabled-82 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <div
          className="MuiSelect-root-92"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-93 MuiSelect-selectMenu-94 MuiSelect-disabled-95 MuiInput-input-87 MuiInput-disabled-82"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={false}
            id="disabled-select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiSelect-icon-96"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Switches, Radio Buttons and Checkboxes
    </h2>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldInline-60"
    >
      <label
        className="MuiFormControlLabel-root-178"
      >
        <span
          className="MuiSwitch-root-181"
        >
          <span
            className="MuiButtonBase-root-149 MuiIconButton-root-143 MuiSwitchBase-root-190 MuiSwitch-switchBase-184 MuiSwitch-colorPrimary-186"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-148"
            >
              <span
                className="MuiSwitch-icon-182"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-193"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
                value="switch"
              />
            </span>
            <span
              className="MuiTouchRipple-root-157"
            />
          </span>
          <span
            className="MuiSwitch-bar-189"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-180"
        >
          Switch
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-138"
      >
        Display Helper Text
      </p>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldInline-60"
    >
      <label
        className="MuiFormControlLabel-root-178 MuiFormControlLabel-disabled-179"
      >
        <span
          className="MuiSwitch-root-181"
        >
          <span
            className="MuiButtonBase-root-149 MuiButtonBase-disabled-150 MuiIconButton-root-143 MuiIconButton-disabled-147 MuiSwitchBase-root-190 MuiSwitch-switchBase-184 MuiSwitch-colorPrimary-186 MuiSwitchBase-disabled-192 MuiSwitch-disabled-188"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <span
              className="MuiIconButton-label-148"
            >
              <span
                className="MuiSwitch-icon-182"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-193"
                disabled={true}
                onChange={[Function]}
                type="checkbox"
                value="switch-1"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-bar-189"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-180 MuiFormControlLabel-disabled-179"
        >
          Switch - Disabled
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-138 MuiFormHelperText-disabled-140"
      >
        Display Helper Text
      </p>
    </div>
  </div>
  <div
    className="FormSubmitButton-root-194"
  >
    <button
      className="MuiButtonBase-root-149 MuiButton-root-198 MuiButton-raised-203 MuiButton-raisedSecondary-205 FormSubmitButton-button-196"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-199"
      >
        Save
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>
</form>
`;

exports[`renders correctly with content 1`] = `
<form
  autoComplete="off"
  noValidate={true}
>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form
    </h2>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
        data-shrink={true}
        htmlFor="text"
      >
        Text Field
        <span
          className="MuiFormLabel-asterisk-78"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={true}
          className="MuiInput-input-87"
          disabled={false}
          id="text"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          rows={1}
          type="text"
          value="prefilled text-field"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="select"
      >
        Select
        <span
          className="MuiFormLabel-asterisk-78"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <div
          className="MuiSelect-root-92"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-93 MuiSelect-selectMenu-94 MuiInput-input-87"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={true}
            id="select"
            required={true}
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiSelect-icon-96"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
        data-shrink={true}
        htmlFor="number"
      >
        Number
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="number"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="number"
          value={10}
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthFull-64"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="multiline"
      >
        Multiline
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-multiline-85 MuiInput-underline-83"
      >
        <textarea
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputMultiline-89"
          disabled={false}
          id="multiline"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={5}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63 FormFieldListBranch-root-107"
    >
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="list"
        >
          List
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-108"
      >
        <ul
          className="MuiList-root-111 MuiList-padding-112"
        />
      </div>
      <div>
        Array [
          "",
          <div
            className="MuiChip-root-124 MuiChip-deletable-126"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="MuiChip-label-129"
            >
              Foo
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          <div
            className="MuiTooltip-popper-116"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <div
              aria-hidden={true}
              className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
              role="tooltip"
            >
              Foo-Baz
            </div>
          </div>,
        ]
        <div
          className="MuiChip-root-124 MuiChip-deletable-126 FormFieldListBranch-selectedItem-110"
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiChip-label-129"
          >
            Bar
          </span>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        Array [
          "",
          <div
            className="MuiChip-root-124 MuiChip-deletable-126"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="MuiChip-label-129"
            >
              Baz
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97 MuiChip-deleteIcon-130"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          <div
            className="MuiTooltip-popper-116"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <div
              aria-hidden={true}
              className="MuiTooltip-tooltip-118 MuiTooltip-tooltipPlacementBottom-123"
              role="tooltip"
            >
              Foo-Baz
            </div>
          </div>,
        ]
      </div>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63 FormFieldListBranch-root-107"
    >
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="free-list"
        >
          Free List
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="free-list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-108"
      >
        <ul
          className="MuiList-root-111 MuiList-padding-112"
        />
      </div>
      <div />
    </div>
    <div
      className="FormGroupWrapper-groupIntegrated-4"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 FormBranch-title-1"
      >
        Nested Form
      </h3>
      <div
        className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
          data-shrink={false}
          htmlFor="nested-text"
        >
          Nested Text
        </label>
        <div
          className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="nested-text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            rows={1}
            type="text"
            value=""
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-97"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      />
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthFull-64 FormFieldBranch-field-59"
    >
      <h1
        className="MuiTypography-root-33 MuiTypography-headline-38"
      >
        Content
      </h1>
      <hr
        className="MuiDivider-root-134"
      />
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby="url-helper-text"
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="url"
      >
        URL
      </label>
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="url"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="url"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-138"
        id="url-helper-text"
      >
        Should be URL with trailing slash
      </p>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <div
        className="MuiInput-root-79 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-inputType-90"
          disabled={false}
          id="empty"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Date
    </h2>
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="date"
        >
          Date
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="date"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03.01.2018"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="time"
        >
          Time
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="time"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03:28 pm"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
    Array [
      <div
        className="MuiFormControl-root-65 FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldDate-61"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73 MuiInputLabel-shrink-72"
          data-shrink={true}
          htmlFor="datetime"
        >
          Datetime
        </label>
        <div
          className="MuiInput-root-79 MuiInput-formControl-80 MuiInput-underline-83 WithUtils-DateTextField--input-142"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            className="MuiInput-input-87"
            disabled={false}
            id="datetime"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={false}
            type="text"
            value="03.01.2018, 03:28 pm"
          />
          <div
            className="MuiInputAdornment-root-131 MuiInputAdornment-positionEnd-133"
          >
            <button
              className="MuiButtonBase-root-149 MuiIconButton-root-143"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiIconButton-label-148"
              >
                 
                <span
                  aria-hidden="true"
                  className="material-icons MuiIcon-root-151"
                >
                   
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-97"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                    </g>
                  </svg>
                   
                </span>
                 
              </span>
              <span
                className="MuiTouchRipple-root-157"
              />
            </button>
          </div>
        </div>
      </div>,
      "",
    ]
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Disabled fields
    </h2>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="disabled"
      >
        Disabled Text
      </label>
      <div
        className="MuiInput-root-79 MuiInput-disabled-82 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="MuiInput-input-87 MuiInput-disabled-82"
          disabled={true}
          id="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          rows={1}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-65 MuiFormControl-marginNormal-66 MuiFormControl-fullWidth-68 FormFieldBranch-field-59 FormFieldBranch-widthMid-63"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-74 MuiInputLabel-root-69 MuiInputLabel-formControl-70 MuiInputLabel-animated-73"
        data-shrink={false}
        htmlFor="disabled-select"
      >
        Disabled Select
      </label>
      <div
        className="MuiInput-root-79 MuiInput-disabled-82 MuiInput-fullWidth-86 MuiInput-formControl-80 MuiInput-underline-83"
      >
        <div
          className="MuiSelect-root-92"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-93 MuiSelect-selectMenu-94 MuiSelect-disabled-95 MuiInput-input-87 MuiInput-disabled-82"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203",
                }
              }
            />
          </div>
          <input
            aria-invalid={false}
            aria-required={false}
            id="disabled-select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-97 MuiSelect-icon-96"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Switches, Radio Buttons and Checkboxes
    </h2>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldInline-60"
    >
      <label
        className="MuiFormControlLabel-root-178"
      >
        <span
          className="MuiSwitch-root-181"
        >
          <span
            className="MuiButtonBase-root-149 MuiIconButton-root-143 MuiSwitchBase-root-190 MuiSwitch-switchBase-184 MuiSwitch-colorPrimary-186"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-148"
            >
              <span
                className="MuiSwitch-icon-182"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-193"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
                value="switch"
              />
            </span>
            <span
              className="MuiTouchRipple-root-157"
            />
          </span>
          <span
            className="MuiSwitch-bar-189"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-180"
        >
          Switch
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-138"
      >
        Display Helper Text
      </p>
    </div>
    <div
      className="FormFieldBranch-field-59 FormFieldBranch-widthSmall-62 FormFieldBranch-fieldInline-60"
    >
      <label
        className="MuiFormControlLabel-root-178 MuiFormControlLabel-disabled-179"
      >
        <span
          className="MuiSwitch-root-181"
        >
          <span
            className="MuiButtonBase-root-149 MuiButtonBase-disabled-150 MuiIconButton-root-143 MuiIconButton-disabled-147 MuiSwitchBase-root-190 MuiSwitch-switchBase-184 MuiSwitch-colorPrimary-186 MuiSwitchBase-disabled-192 MuiSwitch-disabled-188"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <span
              className="MuiIconButton-label-148"
            >
              <span
                className="MuiSwitch-icon-182"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-193"
                disabled={true}
                onChange={[Function]}
                type="checkbox"
                value="switch-1"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-bar-189"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-180 MuiFormControlLabel-disabled-179"
        >
          Switch - Disabled
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-138 MuiFormHelperText-disabled-140"
      >
        Display Helper Text
      </p>
    </div>
  </div>
  <p>
    Foo
  </p>
  <div
    className="FormSubmitButton-root-194"
  >
    <button
      className="MuiButtonBase-root-149 MuiButton-root-198 MuiButton-raised-203 MuiButton-raisedSecondary-205 FormSubmitButton-button-196"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-199"
      >
        Save the form
      </span>
      <span
        className="MuiTouchRipple-root-157"
      />
    </button>
  </div>
</form>
`;
